# prd-req-tool

./: .gitignore  Main.py  llmfactory.py  pyproject.toml
pages/: 1_Read_PRD.py  2_Detail_Requirements.py
